# bottrad

./: .env.example  AlphaBot-Scalper V4.py  Procfile  README.md  README_THAI.md  RUN_BACKTEST.bat  RUN_LIVE_BOT.bat  RUN_PAPER_TRADE.bat  START_BOT.bat  ai_chatbot.py  ai_realtime_bot.py  alphabot_v4.py  backtest_v2.py  backtester_ui.py  chat_history.json  check_status.py  decisions.json  ml_model.py  multi_coin.py  paper_bot.py  paper_bot_full.py  paper_bot_v2.py  paper_bot_v4.py  paper_bot_v5.py  paper_bot_v6.py  paper_trade_bot.py  paper_trade_multicoin.py  paper_trade_status.json  paper_trades.json  pyproject.toml  quick_backtest.py  realtime_chat_history.json  requirements.txt  run_ai_bot.bat  run_bot.bat  run_paper_bot.bat  run_v5.bat  run_v6.bat  setup_and_download.bat  setup_windows.bat  (+3 more)
bots/: paper_trade_bot.py
paper_trade_v2/: .env.example  README.md  START.bat  bot.py  trades.json
