[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphabot-scalper"
version = "4.0.0"
description = "AlphaBot-Scalper V4 - Autonomous AI Trading Bot"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "pandas_ta>=0.3.14b",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
]
